--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,6 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+<script src="{{ root_url }}/js/jquery.timeago.js" type="text/javascript"></script>
+<script src="{{ root_url }}/js/showoff.min.js" type="text/javascript"></script>
+<link href="{{ root_url }}/stylesheets/github.css" rel="stylesheet" type="text/css">
