--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -4,3 +4,4 @@
 <script src="{{ root_url }}/js/jquery.timeago.js" type="text/javascript"></script>
 <script src="{{ root_url }}/js/showoff.min.js" type="text/javascript"></script>
 <link href="{{ root_url }}/stylesheets/github.css" rel="stylesheet" type="text/css">
+<link href="{{ root_url }}/stylesheets/custom.css" rel="stylesheet" type="text/css">
