--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -14,17 +14,15 @@
   	</div>
   </div>
   <div class="container" id="main">
-    <div class="span12">
-      <div class="row-fluid">
-        <div id="content">
-          {{ content | expand_urls: root_url }}
-        </div>
+    <div class="">
+      <div id="content">
+        {{ content | expand_urls: root_url }}
       </div>
-      <div class="row-fluid">
-        <footer class="footer-page" role="contentinfo">
-          {% include footer.html %}
-        </footer>
-      </div>
+    </div>
+    <div class="">
+      <footer class="footer-page" role="contentinfo">
+        {% include footer.html %}
+      </footer>
     </div>
   </div>
   {% include after_footer.html %}
