--- a/source/stylesheets/custom.css
+++ b/source/stylesheets/custom.css
@@ -12,3 +12,9 @@ article blockquote {
 li {
     margin-bottom: 10px;
 }
+
+p code, li code {
+    font-size: 0.8em;
+    vertical-align: middle;
+    color: #2c3e50;
+}
