--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-    Hi. I'm {{ site.author }}.
+    Hi, I'm {{ site.author }}!
     <h3 class="tagline">These and thoughts and experiments about web development and programming.</h3>
   </div>
 </div>
