--- a/source/presentations/forumphp-middlewares/style/colors.less
+++ b/source/presentations/forumphp-middlewares/style/colors.less
@@ -1,3 +1,5 @@
+@color-black: #272727;
+
 @color-primary-0: #647AAB;	/* Main Primary color */
 @color-primary-1: #C4D0E7;
 @color-primary-2: #92A4CC;
