--- a/source/presentations/forumphp-middlewares/style/main.less
+++ b/source/presentations/forumphp-middlewares/style/main.less
@@ -2,6 +2,8 @@
 @import "code";
 @import "titles";
 @import "persona";
+@import "slides";
+@import "browser-mockup";
 
 * {
     box-sizing: border-box;
