--- a/source/presentations/forumphp-middlewares/style/main.css
+++ b/source/presentations/forumphp-middlewares/style/main.css
@@ -76,7 +76,7 @@ h2 a:last-child {
 }
 .remark-slide > .main-title em {
   font-style: normal;
-  color: #C4D0E7;
+  color: #92A4CC;
 }
 .remark-slide > .main-title .remark-slide-number {
   visibility: hidden;
@@ -96,6 +96,20 @@ h2 a:last-child {
 }
 .remark-slide > .full-image .remark-slide-number {
   visibility: hidden;
+}
+.left-block,
+.right-block {
+  width: 48%;
+}
+.left-block .remark-code,
+.right-block .remark-code {
+  font-size: 0.75em;
+}
+.left-block {
+  float: left;
+}
+.right-block {
+  float: right;
 }
 .browser-mockup {
   border-top: 2em solid rgba(230, 230, 230, 0.7);
