--- a/source/presentations/forumphp-middlewares/style/slides.less
+++ b/source/presentations/forumphp-middlewares/style/slides.less
@@ -34,7 +34,7 @@
     }
     em {
         font-style: normal;
-        color: @color-primary-1;
+        color: @color-primary-2;
     }
 
     .remark-slide-number {
@@ -59,4 +59,17 @@
     .remark-slide-number {
         visibility: hidden;
     }
+}
+
+.left-block, .right-block {
+    width: 48%;
+    .remark-code {
+        font-size: 0.75em;
+    }
+}
+.left-block {
+    float: left;
+}
+.right-block {
+    float: right;
 }
