--- a/source/presentations/forumphp-middlewares/style/browser-mockup.less
+++ b/source/presentations/forumphp-middlewares/style/browser-mockup.less
@@ -5,6 +5,9 @@
     border-radius: 3px 3px 0 0;
     display: block;
     padding: 100px 80px;
+    &.error {
+        border-top-color: rgba(218, 138, 138, 0.7);
+    }
 }
 
 .browser-mockup:before {
