--- a/source/presentations/forumphp-middlewares/style/slides.less
+++ b/source/presentations/forumphp-middlewares/style/slides.less
@@ -36,9 +36,23 @@
         font-style: normal;
         color: @color-primary-2;
     }
+    strong {
+        color: @color-secondary-2-3;
+    }
 
     .remark-slide-number {
         visibility: hidden;
+    }
+}
+
+.remark-slide > .section {
+    vertical-align: middle;
+    text-align: center;
+    background: @color-primary-3;
+    color: white;
+    h1 {
+        font-size: 100px;
+        color: #f3f3f3;
     }
 }
 
