--- a/source/presentations/forumphp-middlewares/style/slides.css
+++ b/source/presentations/forumphp-middlewares/style/slides.css
@@ -80,3 +80,9 @@
 .right-block {
   float: right;
 }
+.remark-slide > .center-image {
+  text-align: center;
+}
+.remark-slide > .center-image img:first-of-type {
+  max-height: 570px;
+}
