--- a/source/presentations/forumphp-middlewares/style/slides.less
+++ b/source/presentations/forumphp-middlewares/style/slides.less
@@ -87,3 +87,10 @@
 .right-block {
     float: right;
 }
+
+.remark-slide > .center-image {
+    text-align: center;
+    img:first-of-type {
+        max-height: 570px;
+    }
+}
