--- a/source/presentations/forumphp-middlewares/style/code.less
+++ b/source/presentations/forumphp-middlewares/style/code.less
@@ -3,6 +3,7 @@ pre {
     background: #F0F0F0;
     padding: 20px;
     line-height: 27px;
+    margin: 0;
 }
 
 .remark-code, .remark-inline-code {
@@ -13,5 +14,5 @@ pre {
     padding: 2px;
 }
 .remark-code {
-    font-size: 20px;
+    font-size: 23px;
 }
