--- a/source/presentations/forumphp-middlewares/style/slides.less
+++ b/source/presentations/forumphp-middlewares/style/slides.less
@@ -1,7 +1,10 @@
 @import "colors";
 
 .remark-slide-content {
-    padding: 1em 6em 1em 6em;
+    padding: 1em 2em;
+}
+.remark-slide-number {
+    right: 5px;
 }
 
 .remark-slide > .title {
@@ -24,9 +27,10 @@
     text-align: center;
     background: @color-black;
     color: white;
+    padding: 1em 3em;
 
     h1 {
-        font-size: 70px;
+        font-size: 85px;
         color: #f3f3f3;
     }
     h3 {
