--- a/source/presentations/forumphp-middlewares/style/main.css
+++ b/source/presentations/forumphp-middlewares/style/main.css
@@ -6,6 +6,7 @@ pre {
   background: #F0F0F0;
   padding: 20px;
   line-height: 27px;
+  margin: 0;
 }
 .remark-code,
 .remark-inline-code {
@@ -16,7 +17,7 @@ pre {
   padding: 2px;
 }
 .remark-code {
-  font-size: 20px;
+  font-size: 23px;
 }
 h1,
 h2,
@@ -46,7 +47,10 @@ h2 a:last-child {
   color: #BA6D2F;
 }
 .remark-slide-content {
-  padding: 1em 6em 1em 6em;
+  padding: 1em 2em;
+}
+.remark-slide-number {
+  right: 5px;
 }
 .remark-slide > .title {
   vertical-align: middle;
@@ -66,9 +70,10 @@ h2 a:last-child {
   text-align: center;
   background: #272727;
   color: white;
+  padding: 1em 3em;
 }
 .remark-slide > .main-title h1 {
-  font-size: 70px;
+  font-size: 85px;
   color: #f3f3f3;
 }
 .remark-slide > .main-title h3 {
