--- a/source/presentations/forumphp-middlewares/style/slides.less
+++ b/source/presentations/forumphp-middlewares/style/slides.less
@@ -1,10 +1,7 @@
 @import "colors";
 
 .remark-slide-content {
-    padding: 1em 2em;
-}
-.remark-slide-number {
-    right: 5px;
+    padding: 1em 6em 1em 6em;
 }
 
 .remark-slide > .title {
@@ -27,10 +24,9 @@
     text-align: center;
     background: @color-black;
     color: white;
-    padding: 1em 3em;
 
     h1 {
-        font-size: 85px;
+        font-size: 70px;
         color: #f3f3f3;
     }
     h3 {
