--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,12 @@
                     Copyright &copy; {{ site.time | date: "%Y" }} - Matthieu Napoli -
                     Theme by <a href="http://alexgaribay.com">Alex Garibay</a>
                 </p>
+                <p>
+                    Related and unrelated sites, whatever:
+                    <a href="https://externals.io/" title="PHP internals mailing list">Externals.io</a>,
+                    <a href="http://php-di.org/" title="PHP dependency injection container">PHP-DI</a>,
+                    <a href="https://petit-pilea.com/" title="Acheter des piléas peperomioïde sur Lyon">Petit Piléa</a>
+                </p>
             </footer>
         </div>
     </div>
