--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,6 +95,7 @@
                     Related and unrelated sites, whatever:
                     <a href="https://externals.io/" title="PHP internals mailing list">Externals.io</a>,
                     <a href="http://php-di.org/" title="PHP dependency injection container">PHP-DI</a>,
+                    <a href="https://prettyci.com/" title="PHP coding standard continuous integration">PrettyCI</a>,
                     <a href="https://petit-pilea.com/" title="Acheter des piléas peperomioïde sur Lyon">Petit Piléa</a>
                 </p>
             </footer>
