--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -71,3 +71,15 @@ pre code, pre code.hljs {
         padding: 10px 10px;
     }
 }
+
+/* Tables */
+table {
+    margin-bottom: 1rem;
+}
+table thead th {
+    border-bottom: 2px solid #dee2e6;
+}
+table td, table th {
+    padding: .5rem 1rem;
+    border-top: 1px solid #dee2e6;
+}
