Add serverless PHP slides

--- a/templates/talks.html.twig
+++ b/templates/talks.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% set metaTitle = 'Talks | Matthieu Napoli' %}
+{% set metaTitle = 'Talks and videos | Matthieu Napoli' %}
 {% set metaDescription = 'Talks and workshops about web development, PHP and serverless that I have given at conferences and meetups.' %}
 
 {% block body %}
@@ -12,15 +12,20 @@
 
     <section class="talk">
         <h2>Serverless PHP</h2>
-        <p class="small">An introduction to serverless and how to deploy PHP applications using the Bref project.</p>
+        <p>An introduction to serverless and how to deploy PHP applications on FaaS providers using <a href="https://github.com/mnapoli/bref">Bref</a>. Read more about this topic in the <a href="/serverless-php/">Serverless & PHP article</a>.</p>
         <div class="row">
             <div class="col-md-8">
-                <div style="width: 100%; min-height: 250px; background-color: #eee; text-align: center; line-height: 250px">Slides and video coming soon</div>
+                <div class="talk-embed talk-embed-4-3">
+                    <object data="/presentations/serverless-php/serverless-php.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf">
+                        Your browser does not support pdfs, <a href="/presentations/serverless-php/serverless-php.pdf">click here to download the file.</a>
+                    </object>
+                </div>
             </div>
             <div class="col">
-                <p><a href="https://www.cascadiaphp.com/">CascadiaPHP Portland</a></p>
+                <p>Given at <a href="https://www.cascadiaphp.com/">CascadiaPHP 2018</a>, <a href="https://event.afup.org/forumphp2018/speakers/#1888">ForumPHP 2018</a> and <a href="https://2018.phpce.eu/en/">phpCE Prague 2018</a>.</p>
                 <ul>
-                    <li><a href="#">Joind.in</a></li>
+                    <li><a href="/presentations/serverless-php/serverless-php.pdf" title="See the slides">Slides</a></li>
+                    <li><a href="https://joind.in/event/forum-php-2017-2018/serverless-et-php">Joind.in</a></li>
                 </ul>
             </div>
         </div>
@@ -28,7 +33,7 @@
 
     <section class="talk">
         <h2>Middleware-based architectures</h2>
-        <p class="small">Middlewares is a pattern that is taking over HTTP applications: what is it and how can we create a framework from scratch with it?</p>
+        <p>Middlewares is a pattern that is taking over HTTP applications: what is it and how can we create a framework from scratch with it?</p>
         <div class="row">
             <div class="col-md-8">
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/64TH94pclyU" frameborder="0" allowfullscreen></iframe>
@@ -41,11 +46,7 @@
                 </ul>
             </div>
         </div>
-    </section>
-
-    <section class="talk">
-        <h2>🇫🇷 Middlewares : un vieux concept au coeur des nouvelles architectures</h2>
-        <p class="small">Une introduction au design pattern du middleware HTTP en PHP. Ce talk a été accompagné d'un workshop au ForumPHP 2017.</p>
+        <p>🇫🇷 Une introduction au design pattern du middleware HTTP en PHP. Ce talk a été accompagné d'un workshop au ForumPHP 2017.</p>
         <div class="row">
             <div class="col-md-8">
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/Qma1HZ3gsu8" frameborder="0" allowfullscreen></iframe>
@@ -62,7 +63,7 @@
 
     <section class="talk">
         <h2>🇫🇷 Lancez-vous dans l'open source</h2>
-        <p class="small">Comment affronter les 2 grands problèmes de l'open source : "mon projet n'est utilisé par personne", et "mon projet est utilisé par plein de monde".</p>
+        <p>Comment affronter les 2 grands problèmes de l'open source : "mon projet n'est utilisé par personne", et "mon projet est utilisé par plein de monde".</p>
         <div class="row">
             <div class="col-md-8">
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/HTx80GS66e0" frameborder="0" allowfullscreen></iframe>
@@ -79,7 +80,7 @@
 
     <section class="talk">
         <h2>🇫🇷 Get Off My Domain</h2>
-        <p class="small">Introduction à la modélisation du domaine dans l'approche <em>Domain Driven Design</em>.</p>
+        <p>Introduction à la modélisation du domaine dans l'approche <em>Domain Driven Design</em>.</p>
         <div class="row">
             <div class="col-md-8">
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/Yj_2hUE-Lio?list=PLGlYeGauEwnvAsDzJr9DlLYP09UIWoW2I" frameborder="0" allowfullscreen></iframe>
@@ -95,7 +96,7 @@
 
     <section class="talk">
         <h2>🇫🇷 PSR-0 to 12</h2>
-        <p class="small">Présentation des PSR du <a href="https://www.php-fig.org/">PHP-FIG</a>, de 0 à 12, en 12 minutes.</p>
+        <p>Présentation des PSR du <a href="https://www.php-fig.org/">PHP-FIG</a>, de 0 à 12, en 12 minutes.</p>
         <div class="row">
             <div class="col-md-8">
                 <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/fPpGIgeKTv0" frameborder="0" allowfullscreen></iframe>
@@ -111,7 +112,7 @@
 
     <section class="talk">
         <h2>Dependency Injection & Containers</h2>
-        <p class="small">What is dependency injection and what are IoC containers?</p>
+        <p>What is dependency injection and what are IoC containers?</p>
         <div class="row">
             <div class="col-md-8">
                 <a href="/presentations/di/" title="View the slides">
@@ -126,7 +127,7 @@
 
     <section class="talk">
         <h2>🇫🇷 Interopérabilité cross-frameworks</h2>
-        <p class="small">Comment construire une application en utilisant plusieurs frameworks qui collaborent ?</p>
+        <p>Comment construire une application en utilisant plusieurs frameworks qui collaborent ?</p>
         <div class="row">
             <div class="col-md-8">
                 <a href="/presentations/framework-interop-fr/" title="View the slides">
@@ -141,7 +142,7 @@
 
     <section class="talk">
         <h2>🇫🇷 Injection de dépendances, Containers & PHP-DI</h2>
-        <p class="small">Introduction à l'injection de dépendances, les containers et <a href="http://php-di.org/">PHP-DI</a>.</p>
+        <p>Introduction à l'injection de dépendances, les containers et <a href="http://php-di.org/">PHP-DI</a>.</p>
         <div class="row">
             <div class="col-md-8">
                 <a href="/presentations/di-fr/" title="View the slides">
