--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -172,12 +172,27 @@ article table td, table th {
 
 .talk {
     margin-bottom: 40px;
-}
-.talk h2 {
-    font-size: 23px;
-}
-.talk img {
-    max-width: 100%;
+    font-size: 15px;
+    h2 {
+        font-size: 23px;
+    }
+    img {
+        max-width: 100%;
+    }
+    .talk-embed {
+        width: 100%;
+        &.talk-embed-4-3 {
+            // See https://stackoverflow.com/questions/1495407/maintain-the-aspect-ratio-of-a-div-with-css
+            padding-bottom: 75%;
+            position: relative;
+            object {
+                position: absolute;
+                top: 0; bottom: 0; left: 0; right: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
 }
 .talk>.row>.col {
     border-left: 2px solid #f0f1f3;
