Add project for https://serverless-php.news/

--- a/templates/projects.html.twig
+++ b/templates/projects.html.twig
@@ -46,6 +46,18 @@
     <hr>
 
     <div class="project">
+        <div class="icon"><i class="fas fa-envelope"></i></div>
+        <div class="content">
+            <h2>Serverless PHP newsletter</h2>
+            <p><a href="https://serverless-php.news/" title="Newsletter on serverless and PHP">serverless-php.news</a> is a monthly newsletter about serverless technologies targeted at PHP developers.</p>
+            <p>It is meant to be a high level overview of what's happening with serverless and what it means for PHP.</p>
+            <a href="https://serverless-php.news/" title="Serverless PHP news"><img class="img-thumbnail" src="/images/projects/serverless-php-news.png" alt="Serverless PHP news"></a>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="project">
         <div class="icon"><i class="fas fa-laptop"></i></div>
         <div class="content">
             <h2>externals.io</h2>
