Improve the list of talks

--- a/templates/talks.html.twig
+++ b/templates/talks.html.twig
@@ -22,7 +22,29 @@
                 </div>
             </div>
             <div class="col">
-                <p>Given at <a href="https://www.cascadiaphp.com/">CascadiaPHP 2018</a>, <a href="https://event.afup.org/forumphp2018/speakers/#1888">ForumPHP 2018</a> and <a href="https://2018.phpce.eu/en/">phpCE Prague 2018</a>.</p>
+                <p>Given at <a href="https://www.cascadiaphp.com/">CascadiaPHP 2018</a> and <a href="https://2018.phpce.eu/en/">phpCE Prague 2018</a>.</p>
+                <ul>
+                    <li><a href="/presentations/serverless-php/serverless-php.pdf" title="See the slides">Slides</a></li>
+                    <li><a href="https://joind.in/event/cascadia-php/serverless-php-applications">Joind.in CascadiaPHP</a>, <a href="https://joind.in/event/php-central-europe-conference-2018/serveless-php-applications">Joind.in phpCE</a></li>
+                </ul>
+            </div>
+        </div>
+        <p>⏱ The 5 minutes introduction to serverless PHP.</p>
+        <div class="row">
+            <div class="col-md-8">
+                <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/gn8BOnLlBGw" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="col">
+                <p><a href="https://milan.serverlessdays.io/">ServerlessDays Milan</a></p>
+            </div>
+        </div>
+        <p>🇫🇷 Une introduction à serverless et comment déployer des applications PHP sur des hébergements FaaS en utilisant <a href="https://github.com/mnapoli/bref">Bref</a>.</p>
+        <div class="row">
+            <div class="col-md-8">
+                <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/nSLwPohkTmI" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="col">
+                <p><a href="https://event.afup.org/forumphp2018/speakers/#1888">ForumPHP 2018</a></p>
                 <ul>
                     <li><a href="/presentations/serverless-php/serverless-php.pdf" title="See the slides">Slides</a></li>
                     <li><a href="https://joind.in/event/forum-php-2017-2018/serverless-et-php">Joind.in</a></li>
