--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -29,14 +29,14 @@
         </script>
 
         <div id="intro-en" class="{{ language == 'fr' ? 'd-none' : '' }}">
-            <p>Hi, I am a <strong>software consultant</strong> passionate about my job. I have been working with PHP and JavaScript for 10 years, as <a href="https://www.linkedin.com/in/matthieunapoli/?locale=en_US">fullstack developer, lead dev and CTO</a>. I work with editors and startups to build SaaS products, e-commerce websites, marketplaces…</p>
-            <p><a href="mailto:matthieu@mnapoli.fr">You can hire me</a> to reinforce your tech team, audit a <strong>PHP/Symfony</strong>/etc project, help <strong>refactor a legacy codebase</strong> or as <strong>CTO on-demand</strong> to get a project started in the right direction.</p>
-            <p>I like to share via <a href="/presentations/">conference talks and workshops</a>, this blog and <a href="http://twitter.com/matthieunapoli">Twitter</a>. I also create and maintain a good amount of <a href="/projects/">open source software</a>.</p>
+            <p>Hi, I am a <strong>software consultant</strong> working on topics such as serverless and PHP. I have been working with PHP and JavaScript as <a href="https://www.linkedin.com/in/matthieunapoli/?locale=en_US">fullstack developer, lead dev and CTO</a>. I work with editors and startups to build SaaS products, e-commerce websites, marketplaces…</p>
+            <p><a href="mailto:matthieu@mnapoli.fr">You can hire me</a> to work on <strong>serverless infrastructure</strong>, <strong>PHP/Symfony</strong> project architecture or as <strong>CTO on-demand</strong> to get a project started in the right direction.</p>
+            <p>I like to share via <a href="/presentations/">conference talks and workshops</a>, this blog and <a href="/projects/">open source projects</a>.</p>
         </div>
         <div id="intro-fr" lang="fr" class="{{ language == 'en' ? 'd-none' : '' }}">
             <p><strong>Consultant technique</strong> spécialisé dans le web, je travaille avec PHP et JavaScript depuis 10 ans. Tour à tour <a href="https://www.linkedin.com/in/matthieunapoli">développeur fullstack, lead dev et CTO</a>, je travaille avec des éditeurs et startups sur des produits <abbr title="Software as a Service">SaaS</abbr>, sites e-commerce, marketplaces…</p>
-            <p><a href="mailto:matthieu@mnapoli.fr">Je peux travailler avec vous</a> pour renforcer votre équipe technique, auditer un projet <strong>PHP/Symfony</strong>/etc, aider au <strong>refactoring de code legacy</strong> ou en tant que <strong>CTO on-demand</strong> pour démarrer votre projet dans la bonne direction.</p>
-            <p>J'aime partager via <a href="/presentations/">des conférences et workshops</a>, ce blog et <a href="http://twitter.com/matthieunapoli">Twitter</a>. Je crée et je maintiens également plusieurs <a href="/projects/">projets open source</a>.</p>
+            <p><a href="mailto:matthieu@mnapoli.fr">Je peux travailler avec vous</a> sur des <strong>infrastructures serverless</strong>, de l'architecture de projets <strong>PHP/Symfony</strong> ou en tant que <strong>CTO on-demand</strong> auprès de projets et d'équipes qui se forment.</p>
+            <p>J'aime partager via <a href="/presentations/">des conférences et workshops</a>, ce blog et des <a href="/projects/">projets open source</a>.</p>
         </div>
     </header>
 
@@ -44,24 +44,16 @@
     <hr>
     <ul>
         <li>
-            <span class="float-right text-muted small">September - Portland</span>
-            <em>Serverless and PHP</em>, <a href="https://www.cascadiaphp.com/">CascadiaPHP</a>
+            <span class="float-right text-muted small">January - Sydney</span>
+            <em>A journey towards serverless on a ship called PHP</em>, <a href="https://www.meetup.com/fr-FR/SydPHP/events/257411431/">Sydney PHP meetup</a>
         </li>
         <li>
-            <span class="float-right text-muted small">October - Milan</span>
-            <em>Deploying serverless PHP applications</em>, <a href="https://milan.serverlessdays.io/talk-matthieu-napoli.html">Serverless Days Milano</a>
+            <span class="float-right text-muted small">February - Poland</span>
+            <em>Deploying serverless PHP applications</em>, <a href="https://2019.expophp.pl/en/#agenda">ExpoPHP</a>
         </li>
         <li>
-            <span class="float-right text-muted small">October - Paris</span>
-            <em>Serverless et PHP</em>, <a href="https://event.afup.org/forumphp2018/speakers/#1888">ForumPHP</a>
-        </li>
-        <li>
-            <span class="float-right text-muted small">October - Prague</span>
-            <em>Serverless and PHP</em>, <a href="https://2018.phpce.eu/en/#agenda">phpCE</a>
-        </li>
-        <li>
-            <span class="float-right text-muted small">November - Moscow</span>
-            <em>Deploying serverless PHP applications</em>, <a href="https://www.devopspro.ru/matthieu-napoli/">DevOps Pro Moscow</a>
+            <span class="float-right text-muted small">May - Lyon</span>
+            <em>Architecture Progressive</em>, <a href="https://event.afup.org/afup-day-2019/afup-day-2019-lyon/programme/">AFUP Day Lyon</a>
         </li>
     </ul>
 
