--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
         <meta property="og:image" content="{{ metaImage }}" />
         <meta name="twitter:card" content="summary_large_image" />
     {% else %}
-        <meta property="og:image" content="/images/profile.jpg" />
+        <meta property="og:image" content="https://mnapoli.fr/images/profile.jpg" />
         <meta name="twitter:card" content="summary" />
     {% endif %}
     <meta name="twitter:site" content="@matthieunapoli" />
