--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -48,12 +48,16 @@
             <em>A journey towards serverless on a ship called PHP</em>, <a href="https://www.meetup.com/fr-FR/SydPHP/events/257411431/">Sydney PHP meetup</a>
         </li>
         <li>
-            <span class="float-right text-muted small">February - Poland</span>
-            <em>Deploying serverless PHP applications</em>, <a href="https://2019.expophp.pl/en/#agenda">ExpoPHP</a>
+            <span class="float-right text-muted small">May - Verona</span>
+            <em>Serverless PHP applications with Bref</em>, <a href="https://2019.phpday.it/talks.html#matthieu-napoli">phpDay</a>
         </li>
         <li>
             <span class="float-right text-muted small">May - Lyon</span>
             <em>Architecture Progressive</em>, <a href="https://event.afup.org/afup-day-2019/afup-day-2019-lyon/programme/">AFUP Day Lyon</a>
+        </li>
+        <li>
+            <span class="float-right text-muted small">May - Belgrade</span>
+            <em>Creating serverless PHP applications</em>, <a href="https://2019.phpsrbija.rs/">PHP Serbia</a>
         </li>
     </ul>
 
