--- a/templates/talks.html.twig
+++ b/templates/talks.html.twig
@@ -29,6 +29,15 @@
                 </ul>
             </div>
         </div>
+        <p>A journey toward serverless on a ship called PHP</p>
+        <div class="row">
+            <div class="col-md-8">
+                <iframe style="width: 100%; min-height: 250px" src="https://www.youtube.com/embed/VfoNUUJggIA" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="col">
+                <p>Sydney PHP meetup</p>
+            </div>
+        </div>
         <p>⏱ The 5 minutes introduction to serverless PHP.</p>
         <div class="row">
             <div class="col-md-8">
