Fix responsive issues

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,8 +51,8 @@
                 </div>
                 <div class="navbar-nav navbar-social-links">
                     <a class="nav-item nav-link" href="http://twitter.com/matthieunapoli" title="Matthieu Napoli on Twitter"><i class="fab fa-twitter"></i></a>
-                    <a class="nav-item nav-link" href="http://github.com/mnapoli" title="Matthieu Napoli on GitHub"><i class="fab fa-github"></i></a>
-                    <a class="nav-item nav-link" href="http://linkedin.com/in/matthieunapoli" title="Matthieu Napoli on Linkedin"><i class="fab fa-linkedin"></i></a>
+                    <a class="nav-item nav-link navbar-social-links-hide" href="http://github.com/mnapoli" title="Matthieu Napoli on GitHub"><i class="fab fa-github"></i></a>
+                    <a class="nav-item nav-link navbar-social-links-hide" href="http://linkedin.com/in/matthieunapoli" title="Matthieu Napoli on Linkedin"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
