--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -47,13 +47,23 @@ blockquote {
     margin: 30px;
 }
 pre {
-    padding: 0;
+    padding: 0 5px;
     border-radius: 0;
-    margin-left: -1000px;
-    padding-left: 1000px;
-    margin-right: -1000px;
-    padding-right: 1000px;
     background-color: #f5f5f5;
+    position: relative;
+    overflow: initial;
+}
+@media only screen and (min-width: 768px) {
+    pre:before {
+        content: " ";
+        display: block;
+        background-color: #f5f5f5;
+        z-index: -1;
+        position: absolute;
+        left: calc(50% - 50vw);
+        right: calc(50% - 50vw);
+        height: 100%;
+    }
 }
 pre code, pre code.hljs {
     display: block;
@@ -65,7 +75,7 @@ pre code, pre code.hljs {
 @media only screen and (max-width: 768px) {
     pre code, pre code.hljs {
         line-height: 20px;
-        font-size: 11px;
+        font-size: 12px;
         padding: 10px 0;
     }
 }
@@ -88,9 +98,12 @@ pre code, pre code.hljs {
 .navbar a {
     text-decoration: none;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 400px) {
     .navbar a {
-        font-size: 15px;
+        font-size: 16px;
+    }
+    .navbar .navbar-social-links-hide {
+        display: none;
     }
 }
 
