--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -69,7 +69,8 @@
             </p>
             <p>
                 Related and unrelated sites, whatever:
-                <a href="https://externals.io/" title="PHP internals mailing list">Externals.io</a>,
+                <a href="https://null.tc/" title="PHP consulting company">null</a>,
+                <a href="https://externals.io/" title="PHP internals mailing list">externals.io</a>,
                 <a href="http://php-di.org/" title="PHP dependency injection container">PHP-DI</a>,
                 <a href="https://prettyci.com/" title="PHP coding standard continuous integration">PrettyCI</a>,
                 <a href="https://serverless-php.news/" title="Newsletter on serverless news for PHP">Serverless PHP news</a>
