Update upcoming events

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -44,20 +44,16 @@
     <hr>
     <ul>
         <li>
-            <span class="float-right text-muted small">January - Sydney</span>
-            <em>A journey towards serverless on a ship called PHP</em>, <a href="https://www.meetup.com/fr-FR/SydPHP/events/257411431/">Sydney PHP meetup</a>
+            <span class="float-right text-muted small">October - Paris</span>
+            <em>L'Architecture Progressive</em>, <a href="https://event.afup.org/">ForumPHP</a>
         </li>
         <li>
-            <span class="float-right text-muted small">May - Verona</span>
-            <em>Serverless PHP applications with Bref</em>, <a href="https://2019.phpday.it/talks.html#matthieu-napoli">phpDay</a>
+            <span class="float-right text-muted small">November - Barcelona</span>
+            <em>Serverless PHP applications with Bref</em>, <a href="https://php.barcelona/">PHP Barcelona</a>
         </li>
         <li>
-            <span class="float-right text-muted small">May - Lyon</span>
-            <em>Architecture Progressive</em>, <a href="https://event.afup.org/afup-day-2019/afup-day-2019-lyon/programme/">AFUP Day Lyon</a>
-        </li>
-        <li>
-            <span class="float-right text-muted small">May - Belgrade</span>
-            <em>Creating serverless PHP applications</em>, <a href="https://2019.phpsrbija.rs/">PHP Serbia</a>
+            <span class="float-right text-muted small">November - Europe</span>
+            <em>Serverless PHP applications with Bref</em>, TBA
         </li>
     </ul>
 
